testdata/golden/sema/invalid/attrs_backend_unknown/only.fmt
// Test: @backend with unknown target (warning)

@backend("quantum")
fn quantum_compute() {
}

@backend("fpga")
fn fpga_compute() {
}
